--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,6 +61,7 @@
   --content-width: 1040px;
 
   --blue-400: #1c2541;
+  --blue-300: #3a506b;
   --cyan-400: #5bc0be;
   --grey-400: #d4d0c4;
   --white: #fff;
