--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,9 +6,8 @@ const { locale, title } = Astro.props
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="/favicon.png" />
         <title>{title}</title>
-        <script type="module" src={Astro.resolve("./libs.js")}></script>
         <style lang="scss">
             @import "../styles/main.scss";
         </style>
