--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -2,10 +2,11 @@
 import { Project } from "../../models/project";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import constants from "../../constants";
-import Header from "../../components/header/header.svelte";
+import Header from "../../components/header.svelte";
 import i18next from "../../utils/i18next";
-import Intro from "../../components/intro/intro.svelte";
-import Projects from "../../components/projects/projects.svelte";
+import Intro from "../../components/intro.svelte";
+import Projects from "../../components/projects.svelte";
+import Skills from "../../components/skills.svelte";
 
 const { locale } = Astro.request.params;
 
@@ -26,5 +27,6 @@ export async function getStaticPaths() {
     <Header />
 		<Intro />
 		<Projects projects={projects} client:visible />
+    <Skills />
 	</main>
 </BaseLayout>
