feat: Add contact

--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -2,6 +2,7 @@
 import { Project } from "../../models/project";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import constants from "../../constants";
+import Contact from "../../components/contact.svelte";
 import Header from "../../components/header.svelte";
 import i18next from "../../utils/i18next";
 import Intro from "../../components/intro.svelte";
@@ -28,5 +29,6 @@ export async function getStaticPaths() {
 		<Intro />
 		<Projects projects={projects} client:visible />
     <Skills />
+    <Contact />
 	</main>
 </BaseLayout>
