--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,6 +58,7 @@
   --font-primary: "Karla";
   --font-secondary: "Poppins";
 
+  --blue-500: #0b132b;
   --blue-400: #1c2541;
   --blue-300: #3a506b;
   --cyan-400: #5bc0be;
