--- a/src/components/templates/index.astro
+++ b/src/components/templates/index.astro
@@ -2,13 +2,13 @@
 import { Project } from "models/project";
 import BaseLayout from "layouts/BaseLayout.astro";
 import constants from "constants/index";
-import Contact from "components/organisms/contact.svelte";
-import Footer from "components/organisms/footer.svelte";
-import Header from "components/organisms/header.svelte";
+import Contact from "components/contact.svelte";
+import Footer from "components/footer.svelte";
+import Header from "components/header.svelte";
 import i18next from "utils/i18next";
-import Intro from "components/organisms/intro.svelte";
-import Projects from "components/organisms/projects.svelte";
-import Skills from "components/organisms/skills.svelte";
+import Intro from "components/intro.svelte";
+import Projects from "components/projects.svelte";
+import Skills from "components/skills.svelte";
 
 const { locale: requestLocale } = Astro.request.params;
 const { locale: propLocale } = Astro.props;
