fix: Refactor to smaller components

--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -1,6 +1,6 @@
 ---
 import { Project } from "models/project";
-import BaseLayout from "layouts/BaseLayout.astro";
+import BaseLayout from "layouts/base-layout.astro";
 import constants from "constants/index";
 import Contact from "components/organisms/contact.svelte";
 import Footer from "components/organisms/footer.svelte";
