feat: Add Ackee

--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -11,6 +11,12 @@ const { locale, title } = Astro.props
         <style lang="scss">
             @import "../styles/main.scss";
         </style>
+        <script
+            async 
+            src="https://ackee.syncwatch.video/tracker.js"
+            data-ackee-server="https://ackee.syncwatch.video"
+            data-ackee-domain-id="fb0769b2-b3ab-493a-ae10-91ff308c72a2"
+        ></script>
     </head>
     <body>
         <slot />
