feat: Add meta tags

--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -6,8 +6,18 @@ const { locale, title } = Astro.props
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+        <meta name="msapplication-TileColor" content="#87BFBE" />
+        <meta name="theme-color" content="#87BFBE" />
+        <meta
+          name="description"
+          content="Hi, I am Silvan. A frontend and backend developer."
+        />
+        <meta
+          name="keywords"
+          content="Silweb.dev, developer, frontend, backend, portfolio"
+        />
 		<link rel="icon" type="image/x-icon" href="/favicon.png" />
-        <title>{title}</title>
+        <title>{title} - Silweb.dev</title>
         <style lang="scss">
             @import "../styles/main.scss";
         </style>
